sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:19: error: not found: value swapped
    if(!swapped) {
        ^AlgCocktailSort3:20: error: not found: value break
      break
      ^